--- a/ribbon/src/main/resources/application.yml
+++ b/ribbon/src/main/resources/application.yml
@@ -1,14 +1,11 @@
 server:
-  port: 8081
+  port: 8010
 spring:
   application:
-    name: provider
+    name: consumer-ribbon
 eureka:
   client:
-    healthcheck: false
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka/
   instance:
     preferIpAddress: true
-    lease-expiration-duration-in-seconds: 30
-    lease-renewal-interval-in-seconds: 10
