feign 模块代码的提交

--- a/provider/src/main/resources/application.yml
+++ b/provider/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: provider
 eureka:
   client:
-    healthcheck: false
+    healthcheck: true
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka/
   instance:
