--- a/ribbon/src/main/resources/application.yml
+++ b/ribbon/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     name: consumer-ribbon
 eureka:
   client:
+    healthcheck: true
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka/
   instance:
