--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.6.RELEASE</version>
 	</parent>
+	<packaging>pom</packaging>
 	<groupId>com.cloud</groupId>
 	<artifactId>business</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
