配置文件上传，拟使用配置中心进行配置管理12 测试

--- a/configureFile/consumer-ribbon-dev.yml
+++ b/configureFile/consumer-ribbon-dev.yml
@@ -1,7 +1,2 @@
-eureka:
-  client:
-    healthcheck: true
-    service-url:
-      defaultZone: http://127.0.0.1:8762/eureka/
-  instance:
-    preferIpAddress: true
+name:
+  a: zhangqiang
