--- a/zuul/src/main/resources/bootstrap.yml
+++ b/zuul/src/main/resources/bootstrap.yml
@@ -13,3 +13,15 @@ spring:
       label: master
       uri: http://127.0.0.1:9005
       profile: dev
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://127.0.0.1:8762/eureka/
+zuul:
+  routes:
+    api-a:
+      path: /api-a/**
+      serviceId: consumer-ribbon
+    api-b:
+      path: /api-b/**
+      serviceId: consumer-feign
