配置文件上传，拟使用配置中心进行配置管理17 测试

--- a/eureka/src/main/resources/bootstrap.yml
+++ b/eureka/src/main/resources/bootstrap.yml
@@ -3,11 +3,11 @@ spring:
     active: dev
 ---
 server:
-  port: 8010
+  port: 8762
 spring:
-  profiles: dev
   application:
-    name: consumer-ribbon
+    name: eureka
+  profiles: dev
   cloud:
     config:
       label: master
