--- a/configureFile/consumer-ribbon-dev.yml
+++ b/configureFile/consumer-ribbon-dev.yml
@@ -1,2 +1,7 @@
-name:
-  a: zhangqiang
+eureka:
+  client:
+    healthcheck: true
+    service-url:
+      defaultZone: http://127.0.0.1:8762/eureka/
+  instance:
+    preferIpAddress: true
