--- a/eureka/src/main/resources/bootstrap.yml
+++ b/eureka/src/main/resources/bootstrap.yml
@@ -11,3 +11,17 @@ spring:
       label: master
       uri: http://127.0.0.1:9005
       profile: dev
+server:
+  port: 8762
+eureka:
+  instance:
+    hostname: localhost
+  server:
+    enable-self-preservation: false
+    eviction-interval-timer-in-ms: 4000
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      # http://localhost:8761/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
