--- a/feign/src/main/resources/bootstrap.yml
+++ b/feign/src/main/resources/bootstrap.yml
@@ -11,6 +11,13 @@ spring:
   cloud:
     config:
       label: master
-      uri: http://127.0.0.1:9005
+      discovery:
+        service-id: configuration
+        enabled: true
+#      uri: http://127.0.0.1:9005
       profile: dev
-
+eureka:
+  client:
+    healthcheck: true
+    serviceUrl:
+      defaultZone: http://127.0.0.1:8762/eureka/
