--- a/zuul/src/main/resources/bootstrap.yml
+++ b/zuul/src/main/resources/bootstrap.yml
@@ -11,5 +11,12 @@ spring:
   cloud:
     config:
       label: master
-      uri: http://127.0.0.1:9005
+#      uri: http://127.0.0.1:9005
       profile: dev
+      discovery:
+        service-id: configuration
+        enabled: true
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://127.0.0.1:8762/eureka/
