--- a/configureFile/consumer-feign-dev.yml
+++ b/configureFile/consumer-feign-dev.yml
@@ -8,3 +8,11 @@ spring:
   sleuth:
     sampler:
       probability: 1.0
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+      cors:
+        allowed-origins: "*"
+        allowed-methods: "*"
