--- a/configureFile/consumer-ribbon-dev.yml
+++ b/configureFile/consumer-ribbon-dev.yml
@@ -12,3 +12,7 @@ management:
       cors:
         allowed-origins: "*"
         allowed-methods: "*"
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+
