--- a/configureFile/consumer-ribbon-dev.yml
+++ b/configureFile/consumer-ribbon-dev.yml
@@ -4,6 +4,10 @@ spring:
   sleuth:
     sampler:
       probability: 1.0
+  rabbitmq:
+    listener:
+      simple:
+        acknowledge-mode: manual
 management:
   endpoints:
     web:
